[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/sprites/turrets/tesla.png" type="Texture" id=1]
[ext_resource path="res://src/actors/turrets/tesla_turret.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/turrets/tesla_chispazo.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/toggle_off..png" type="Texture" id=4]
[ext_resource path="res://assets/GUI/toggle_on..png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 39.5

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 101, 73 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 101, 0, 101, 73 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 202, 0, 101, 73 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 303, 0, 101, 73 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 404, 0, 101, 73 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[node name="tesla_turret" type="Node2D" groups=[
"tesla_turrets",
"turrets",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.140306, -9.19016 )
texture = ExtResource( 1 )

[node name="turret_cooldown" type="Timer" parent="."]

[node name="stun_cooldown" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.561234, 0.209049 )
frames = SubResource( 7 )
frame = 4
playing = true

[node name="stun_sprite_timer" type="Timer" parent="."]

[node name="OnOff" type="CheckButton" parent="."]
margin_left = -8.95568
margin_top = -28.1604
margin_right = 9.04432
margin_bottom = -14.1604
custom_icons/off = ExtResource( 4 )
custom_icons/on = ExtResource( 5 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/hover_pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="turret_cooldown" to="." method="_on_turret_cooldown_timeout"]
[connection signal="timeout" from="stun_cooldown" to="." method="_on_stun_cooldown_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="stun_sprite_timer" to="." method="_on_stun_sprite_timer_timeout"]
[connection signal="toggled" from="OnOff" to="." method="_on_OnOff_toggled"]
